Initial codegen and dynamic providers