@@ -2,9 +2,7 @@ package es.upm.etsiinf.tfg.juanmahou.plugin.tables;
 
 import com.google.protobuf.Descriptors;
 import com.google.protobuf.Descriptors.FieldDescriptor;
-import es.upm.etsiinf.tfg.juanmahou.plugin.types.*;
-import es.upm.etsiinf.tfg.juanmahou.plugin.util.CaseUtils;
-import es.upm.etsiinf.tfg.juanmahou.plugin.util.HashUtils;
+import es.upm.etsiinf.tfg.juanmahou.plugin.DependencyManager;
 import es.upm.etsiinf.tfg.juanmahou.plugin.config.Cardinality;
 import es.upm.etsiinf.tfg.juanmahou.plugin.config.ConfigCardinality;
 import es.upm.etsiinf.tfg.juanmahou.plugin.config.ConfigField;
@@ -12,9 +10,16 @@ import es.upm.etsiinf.tfg.juanmahou.plugin.config.ConfigTable;
 import es.upm.etsiinf.tfg.juanmahou.plugin.tables.field.*;
 import es.upm.etsiinf.tfg.juanmahou.plugin.tables.providers.FilePackageProvider;
 import es.upm.etsiinf.tfg.juanmahou.plugin.tables.providers.PackageProvider;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.Annotation;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.TypeMapping;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.TypeRegistry;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.java.*;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.source.ProtoMessageSourceType;
+import es.upm.etsiinf.tfg.juanmahou.plugin.types.source.SourceType;
+import es.upm.etsiinf.tfg.juanmahou.plugin.util.CaseUtils;
+import es.upm.etsiinf.tfg.juanmahou.plugin.util.HashUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.stringtemplate.v4.ST;
 
 import java.util.*;
 import java.util.function.Predicate;
@@ -24,6 +29,15 @@ import java.util.stream.Collectors;
  * Concrete implementation of a Table, managing fields, keys, and generation logic.
  */
 public class Table {
+    private static final String LAZY_FETCH = "fetch = " + TypeRegistry.FETCH_TYPE + ".LAZY";
+    private static final String OPTIONAL_TRUE = "optional = true";
+    private static final String OPTIONAL_FALSE = "optional = false";
+    private static final String NULLABLE_TRUE = "nullable = true";
+    private static final String NULLABLE_FALSE = "nullable = false";
+
+    private static final String CASCADE_PERSIST_MERGE = "cascade = {" + TypeRegistry.CASCADE_TYPE + ".PERSIST, " + TypeRegistry.CASCADE_TYPE + ".MERGE}";
+
+
     private static final Logger logger = LoggerFactory.getLogger(Table.class);
 
     private final String createdBy;
@@ -35,10 +49,10 @@ public class Table {
 
     private final Set<String> primaryKey = new LinkedHashSet<>();
     private final Map<String, Field> fields = new LinkedHashMap<>();
-    private final List<ForeignKey> foreignKeys = new ArrayList<>();
+//    private final List<ForeignKey> foreignKeys = new ArrayList<>();
     private final Map<String, OneOf> oneOfs = new LinkedHashMap<>();
     private final Map<JavaType, List<Map.Entry<String, Integer>>> enums = new LinkedHashMap<>();
-    private final List<Table> joinTables = new ArrayList<>();
+//    private final List<Table> joinTables = new ArrayList<>();
     private final Map<String, AbstractFieldDescriptor> fieldDescriptors;
 
     public Table(TableManager manager,
@@ -60,6 +74,7 @@ public class Table {
 
     private void initialize() {
         logger.info("> Starting {} as {} by {}", fullName(), name, createdBy);
+        DependencyManager.getInstance().register(fullName());
 
         // determine primary key
         List<String> pk = config.getPrimaryKey();
@@ -80,6 +95,11 @@ public class Table {
                 logger.info("-- Generating synthetic PK '{}' for {}", synthetic, fullName());
             }
             primaryKey.add(synthetic);
+            JavaType syntheticType = new PrimitiveType("Long");
+            List<Annotation> annotations = List.of(new Annotation(TypeRegistry.GENERATED_VALUE_ANNOTATION));
+            // TODO Handle custom generators
+            Field f = new Field(this, synthetic, syntheticType, annotations);
+            addField(f);
             // TODO: add descriptor for synthetic if desired
         } else {
             throw new IllegalStateException("No primary key for " + fullName());
@@ -92,7 +112,6 @@ public class Table {
     }
 
     private void processField(AbstractFieldDescriptor fd) {
-        boolean generated = fd.isGenerated();
         OneOf oneOfCont = null;
 
         // handle oneof
@@ -116,36 +135,159 @@ public class Table {
             FieldDescriptor keyPb = msg.findFieldByName("key");
             FieldDescriptor valPb = msg.findFieldByName("value");
 
-            ConfigField keyCfg = new ConfigField(); keyCfg.setCardinality(ConfigCardinality.REQUIRED);
-            ConfigField valCfg = new ConfigField(); valCfg.setCardinality(ConfigCardinality.REQUIRED);
+            ConfigField keyCfg = new ConfigField();
+            keyCfg.setCardinality(ConfigCardinality.REQUIRED);
+            ConfigField valCfg = new ConfigField();
+            valCfg.setCardinality(ConfigCardinality.REQUIRED);
             AbstractFieldDescriptor keyDesc = AbstractFieldDescriptor.build(keyPb, keyCfg);
             AbstractFieldDescriptor valDesc = AbstractFieldDescriptor.build(valPb, valCfg);
 
-            // build child config
-            logger.error("Map field {} not handled", fd.getName());
-            return;
-//            Map<String, ConfigField> childCfg = new LinkedHashMap<>();
-//            childCfg.put("key", keyCfg);
-//            childCfg.put("value", valCfg);
-//            Map<String, AbstractFieldDescriptor> fieldDescriptors = new LinkedHashMap<>();
-//            fieldDescriptors.put("key", keyDesc);
-//            fieldDescriptors.put("value", valDesc);
-//            for (String pkName : getPrimaryKey()) {
-//                String n = getSqlName() + "_" + pkName;
-//                ConfigField c = new ConfigField(); c.setCardinality(ConfigCardinality.REQUIRED);
-//                childCfg.put(n, c);
-//                AbstractFieldDescriptor afd = this.fieldDescriptors.get(pkName).clone();
-//                afd.setName(n);
-//                afd.setGenerated(false);
-//                fieldDescriptors.put(n, afd);
-//            }
 
-            // TODO: build descriptors and instantiate child Table via createRegularTable
-//            return;
+            if (keyDesc instanceof PrimitiveFieldDescriptor pKeyDesc) {
+                TypeMapping key = TypeRegistry.getPrimitive(pKeyDesc.getType());
+                JavaType val;
+                List<Annotation> annotations = new ArrayList<>(List.of(new Annotation(TypeRegistry.ELEMENT_COLLECTION_ANNOTATION), new Annotation(TypeRegistry.MAP_KEY_COLUMN_ANNOTATION)));
+                if (valDesc instanceof PrimitiveFieldDescriptor pValDesc) {
+                    val = TypeRegistry.getPrimitive(pValDesc.getType()).getJavaType();
+
+                } else if (valDesc instanceof MessageFieldDescriptor mValDesc) {
+                    Descriptors.Descriptor messageType = mValDesc.getMessageType();
+
+                    TypeMapping mapping = TypeRegistry.getMessage(messageType.getFullName());
+                    if (mapping != null) {
+                        val = mapping.getJavaType();
+                    }else{
+                        String nestedId = messageType.getFullName();
+                        ConfigTable cfg = manager.getConfig(nestedId);
+                        if (cfg != null  && cfg.isAsProtobuf()) {
+                            val = new PrimitiveType("byte[]");
+                            annotations.add(new Annotation(TypeRegistry.LOB_ANNOTATION));
+                        }else{
+                            String src = "nested#" + fullName();
+                            Table child = manager.getTable(nestedId, src);
+                            if(child == null) {
+                                logger.error("{} not configured", nestedId);
+                                return;
+                            }
+
+                            val = child.getJavaType();
+                            annotations = List.of(new Annotation(TypeRegistry.MANY_TO_MANY_ANNOTATION), new Annotation(TypeRegistry.MAP_KEY_COLUMN_ANNOTATION));
+
+                        }
+                    }
+                }else{
+                    logger.error("Map value is not a primitive type or a message type");
+                    return;
+                }
+                JavaType map = new MapType(key.getJavaType(), val);
+                Field f = new Field(this, mfd.getName(), map, annotations);
+                addField(f);
+                if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+                return;
+            }else{
+                logger.error("Map key is not a primitive type");
+                return;
+            }
         }
 
         // Message fields
-        if (fd instanceof MessageFieldDescriptor) {
+        if (fd instanceof MessageFieldDescriptor mfd) {
+            Descriptors.Descriptor messageType = mfd.getMessageType();
+            TypeMapping mapping = TypeRegistry.getMessage(messageType.getFullName());
+            if (mapping != null) {
+                List<Annotation> annotations = new ArrayList<>(1);
+                switch (mfd.getCard()) {
+                    case REQUIRED -> {
+                        annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_FALSE)));
+                    }
+                    case REPEATED -> {
+                        annotations.add(new Annotation(TypeRegistry.ELEMENT_COLLECTION_ANNOTATION));
+                    }
+                    case OPTIONAL -> {
+                        annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_TRUE)));
+                    }
+                }
+                Field f = new Field(this, mfd.getName(), mapping.getJavaType(), annotations);
+                addField(f);
+                if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+                return;
+            }
+            String nestedId = messageType.getFullName();
+            ConfigTable cfg = manager.getConfig(nestedId);
+            if (cfg != null  && cfg.isAsProtobuf()) {
+                mapping = new TypeMapping(SourceType.build(nestedId), new PrimitiveType("byte[]"));
+                List<Annotation> annotations = new ArrayList<>(List.of(new Annotation(TypeRegistry.LOB_ANNOTATION)));
+                switch (mfd.getCard()) {
+                    case REQUIRED -> {
+                        annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_FALSE)));
+                    }
+                    case REPEATED -> {
+                        annotations.add(new Annotation(TypeRegistry.ELEMENT_COLLECTION_ANNOTATION));
+                    }
+                    case OPTIONAL -> {
+                        annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_TRUE)));
+                    }
+                }
+                Field f = new Field(this, mfd.getName(), mapping.getJavaType(), annotations);
+                addField(f);
+                if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+
+                return;
+            }
+            String src = "nested#" + fullName();
+            Table child = manager.getTable(nestedId, src);
+            if(child == null) {
+                logger.error("{} not configured", nestedId);
+                return;
+            }
+
+
+            mapping = new TypeMapping(SourceType.build(nestedId), child.getJavaType());
+
+            if (src.equals(child.createdBy) && isNestedType.test(nestedId)) {
+                logger.error("Nested type {}", nestedId);
+                // TODO add as a sub table?
+                return;
+            }
+
+            JavaType childFieldType = this.getJavaType();
+
+            List<Annotation> childAnnotations = new ArrayList<>(2);
+
+            List<Annotation> annotations = new ArrayList<>(2);
+            JavaType annotationMapping = TypeRegistry.ONE_TO_ONE_ANNOTATION;
+            switch (mfd.getCard()) {
+                case REQUIRED -> {
+                    annotations.add(new Annotation(TypeRegistry.ONE_TO_ONE_ANNOTATION, List.of(OPTIONAL_FALSE, LAZY_FETCH)));
+
+                    // CHILD ANNOTATIONS
+
+                }
+                case REPEATED -> {
+                    annotations.add(new Annotation(TypeRegistry.MANY_TO_MANY_ANNOTATION, List.of(LAZY_FETCH)));
+                    mapping = mapping.toSet();
+                    // CHILD ANNOTATIONS
+                    childFieldType = new SetType(childFieldType);
+                    annotationMapping = TypeRegistry.MANY_TO_MANY_ANNOTATION;
+                }
+                case OPTIONAL -> {
+                    annotations.add(new Annotation(TypeRegistry.ONE_TO_ONE_ANNOTATION, List.of(OPTIONAL_TRUE, LAZY_FETCH)));
+                    // CHILD ANNOTATIONS
+                }
+            }
+            childAnnotations.add(new Annotation(annotationMapping, List.of("mappedBy = \"" + mfd.getName() + "\"", LAZY_FETCH)));
+            DependencyManager.getInstance().addDependency(fullName(), child.fullName());
+//            child.addMappedByField(this);
+
+            Field f = new Field(this, mfd.getName(), mapping.getJavaType(), annotations);
+            addField(f);
+            if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+
+            child.addMappedByField(f, new Field(child, getSqlName() + "_" + f.getName(), childFieldType, childAnnotations));
+
+
+
+
 //            MessageFieldDescriptor mfd = (MessageFieldDescriptor) fd;
 //            String nestedId = mfd.getMessageType().getFullName();
 //            TypeMapping tm = TypeRegistry.getMessage(nestedId);
@@ -156,54 +298,75 @@ public class Table {
 //                return;
 //            }
             // nested and repeated handlers omitted for brevity...
-            logger.error("Message field {} not handled", fd.getName());
             return;
         }
 
         // Enum fields
-        if (fd instanceof EnumFieldDescriptor) {
-//            EnumFieldDescriptor efd = (EnumFieldDescriptor) fd;
-//            if (efd.getCard() == Cardinality.REQUIRED || efd.getCard() == Cardinality.OPTIONAL) {
-//                EnumDescriptor ed = efd.getEnumType();
-//                JavaType enumType = new JavaType(ed.getFullName(), ed.getName());
-//                enums.put(enumType,
-//                        ed.getValues().stream()
-//                                .map(v -> Map.entry(v.getName(), v.getNumber()))
-//                                .collect(Collectors.toList()));
-//                Field f = new Field(this, fd.getName(),
-//                        new TypeMapping(null, ed.getFullName(), enumType),
-//                        efd.getCard() == Cardinality.OPTIONAL, extras);
-//                f.setEnum(true);
-//                addField(f, true);
-//                return;
-//            }
-            logger.error("Enum field {} not handled", fd.getName());
+        if (fd instanceof EnumFieldDescriptor efd) {
+            Descriptors.EnumDescriptor ed = efd.getEnumType();
+            JavaType enumType = new PrimitiveType(ed.getName());
+            enums.put(enumType,
+                    ed.getValues().stream()
+                            .map(v -> Map.entry(v.getName(), v.getNumber()))
+                            .collect(Collectors.toList()));
+
+            List<Annotation> annotations = new ArrayList<>(List.of(new Annotation(TypeRegistry.ENUMERATED_ANNOTATION, List.of(TypeRegistry.ENUM_TYPE + ".ORDINAL"))));
+            switch (efd.getCard()) {
+                case REQUIRED -> {
+                    annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_FALSE)));
+                }
+                case REPEATED -> {
+                    logger.error("Not handling repeated enums");
+                    return;
+                }
+                case OPTIONAL -> {
+                    annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_TRUE)));
+                }
+            }
+
+            Field f = new Field(this, efd.getName(), enumType, annotations);
+            addField(f);
+            if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+
             return;
         }
 
         // Primitive fields
-        if (fd instanceof PrimitiveFieldDescriptor) {
-//            PrimitiveFieldDescriptor pfd = (PrimitiveFieldDescriptor) fd;
-//            JavaType jt = TypeRegistry.PRIMITIVE_MAP.get(pfd.getType()).getJavaType();
-//            Field f = new Field(this, pfd.getName(), jt,
-//                    pfd.getCard() == Cardinality.OPTIONAL, extras);
-//            addField(f);
-//            if (oneOfCont!=null) oneOfCont.getFieldGroups().add(Collections.singletonList(f));
-//            return;
-            logger.error("Primitive field {} not handled", fd.getName());
+        if (fd instanceof PrimitiveFieldDescriptor pfd) {
+            TypeMapping type = TypeRegistry.getPrimitive(pfd.getType());
+
+            List<Annotation> annotations = new ArrayList<>();
+            switch (pfd.getCard()) {
+                case REQUIRED -> {
+                    annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_FALSE)));
+                }
+                case REPEATED -> {
+                    type = type.toRepeated();
+                    annotations.add(new Annotation(TypeRegistry.ELEMENT_COLLECTION_ANNOTATION));
+                }
+                case OPTIONAL -> {
+                    annotations.add(new Annotation(TypeRegistry.COLUMN_ANNOTATION, List.of(NULLABLE_TRUE)));
+                }
+            }
+            Field f = new Field(this, pfd.getName(), type.getJavaType(), annotations);
+            addField(f);
+            if (oneOfCont != null) oneOfCont.getFields().add(List.of(f));
+
             return;
         }
 
         logger.error("Unhandled field descriptor type: {}", fd.getClass().getSimpleName());
+
+        // TODO generate_if_missing
     }
 
     private String fullName() {
         return packageProvider.getPackage() + "." + name;
     }
 
-    private void addJoinTable(Table t) {
-        joinTables.add(t);
-    }
+//    private void addJoinTable(Table t) {
+//        joinTables.add(t);
+//    }
 
     private OneOf addOneOf(String name, boolean required) {
         return oneOfs.computeIfAbsent(name, k -> new OneOf(name, required));
@@ -213,22 +376,53 @@ public class Table {
         fields.put(f.getName(), f);
     }
 
-    private void addForeignKey(ForeignKey fk, Table t) {
-        foreignKeys.add(fk);
+    public void addMappedByField(Field other, Field myField) {
+        addField(myField);
     }
+
+//    private void addForeignKey(ForeignKey fk, Table t) {
+//        foreignKeys.add(fk);
+//    }
 
     public String getSqlName() {
         return CaseUtils.toSnakeCase(name);
     }
 
-    public String getName() { return name; }
-    public Set<String> getPrimaryKey() { return Collections.unmodifiableSet(primaryKey); }
-    public Map<String, Field> getFields() { return Collections.unmodifiableMap(fields); }
-    public List<ForeignKey> getForeignKeys() { return Collections.unmodifiableList(foreignKeys); }
-    public Map<String, OneOf> getOneOfs() { return Collections.unmodifiableMap(oneOfs); }
-    public List<Table> getJoinTables() { return Collections.unmodifiableList(joinTables); }
-    public Field getField(String name) { return fields.get(name); }
-    public ClassType getJavaType() { return new ClassType(packageProvider.getPackage(), name); }
+    public String getName() {
+        return name;
+    }
+
+    public Map<JavaType, List<Map.Entry<String, Integer>>> getEnums() {
+        return enums;
+    }
+
+    public Set<String> getPrimaryKey() {
+        return Collections.unmodifiableSet(primaryKey);
+    }
+
+    public Map<String, Field> getFields() {
+        return Collections.unmodifiableMap(fields);
+    }
+
+//    public List<ForeignKey> getForeignKeys() {
+//        return Collections.unmodifiableList(foreignKeys);
+//    }
+
+    public Map<String, OneOf> getOneOfs() {
+        return Collections.unmodifiableMap(oneOfs);
+    }
+
+//    public List<Table> getJoinTables() {
+//        return Collections.unmodifiableList(joinTables);
+//    }
+
+    public Field getField(String name) {
+        return fields.get(name);
+    }
+
+    public ClassType getJavaType() {
+        return new ClassType(packageProvider.getPackage(), name);
+    }
 
     @Override
     public String toString() {
@@ -241,10 +435,10 @@ public class Table {
                 ", isNestedType=" + isNestedType +
                 ", primaryKey=" + primaryKey +
                 ", fields=" + fields +
-                ", foreignKeys=" + foreignKeys +
+//                ", foreignKeys=" + foreignKeys +
                 ", oneOfs=" + oneOfs +
                 ", enums=" + enums +
-                ", joinTables=" + joinTables +
+//                ", joinTables=" + joinTables +
                 ", fieldDescriptors=" + fieldDescriptors +
                 '}';
     }
